// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> matches snapshot when not pressed 1`] = `
<button
  className="button"
>
  Press me!
</button>
`;

exports[`<Button /> matches snapshot when pressed 1`] = `
<button
  className="button--pressed"
>
  Press me!
</button>
`;
